# pokedex

./: .gitignore  README.md  pokedex_audio.py  pokedex_cache.py  pokedex_gen1.py  pokedex_network.py  pokedex_requirements.txt  pokedex_stats.py  pokedex_text.py  pyproject.toml  test_pokedex.py
pokedex_national_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
